<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2016 The Chromium Authors
Use of this source code is governed by a BSD-style license that can be
found in the LICENSE file.
-->

<resources>
    <string name="app_name">AudioFocusGrabber</string>
    <string name="button_gain_name">Gain</string>
    <string name="button_transient_pause_name">Pause</string>
    <string name="button_transient_duck_name">Duck</string>
    <string name="button_hide_notification_name">Hide</string>
    <string name="button_show_notification_name">Show</string>
    <string name="text_notification_prompt">Notification Controller:</string>
</resources>
