<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2015 The Chromium Authors
Use of this source code is governed by a BSD-style license that can be
found in the LICENSE file.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="vertical"
    style="?android:attr/buttonBarStyle">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        style="?android:attr/buttonBarStyle">

        <Button
            android:id="@+id/notification_button_gain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_gain_name"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/notification_button_transient_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_transient_pause_name"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/notification_button_transient_duck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_transient_duck_name"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/notification_button_hide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_hide_notification_name"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

</LinearLayout>
