<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2015 The Chromium Authors
Use of this source code is governed by a BSD-style license that can be
found in the LICENSE file.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp" >

    <TextView
        android:id="@+id/message"
        android:layout_gravity="center_horizontal|top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        style="?android:attr/buttonBarStyle" >

        <Button
            android:id="@+id/button_gain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_gain_name"
            android:onClick="onButtonClicked"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/button_transient_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_transient_pause_name"
            android:onClick="onButtonClicked"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/button_transient_duck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_transient_duck_name"
            android:onClick="onButtonClicked"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_notification_prompt" />
        <Button
            android:id="@+id/button_show_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_show_notification_name"
            android:onClick="onButtonClicked" />
        <Button
            android:id="@+id/button_hide_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_hide_notification_name"
            android:onClick="onButtonClicked" />

    </LinearLayout>

</LinearLayout>
